--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
+    <style>
+       .content img{
+            width: 100%;
+        }
+    </style>
 </head>
 <body style="background-color: white">
 
